[package]
name = "gmsv_downloadugc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["steamworks-rs", "steamworks-rs/steamworks-sys"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"

[dependencies]
gmod = { version = "11.1.1", default-features = false }
steamworks = { path = "./steamworks-rs", features = ["raw-bindings"] }