[package]
name = "gmsv_workshop"
version = "1.0.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
publish = false

[workspace]
members = ["steamworks-rs", "steamworks-rs/steamworks-sys"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"

[features]
refresh-bindgen = []

[dependencies]
gmod = { version = "11.1.1", default-features = false }
steamworks = { path = "./steamworks-rs", features = ["raw-bindings", "refresh-bindgen"] }