[package]
name = "gmsv_workshop"
version = "2.2.6"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
publish = false

[workspace]
members = ["steamworks-rs", "steamworks-rs/steamworks-sys", "steamworks-resolver"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"

[features]
refresh-bindgen = ["steamworks/refresh-bindgen"]

[dependencies]
gmod = { version = "15", default-features = false }
steamworks = { path = "./steamworks-rs", features = ["raw-bindings"] }
gmod-lzma = "1.0.1"